--- a/pom.xml
+++ b/pom.xml
@@ -2,38 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.ramon.pereira</groupId>
-	<artifactId>customer-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Customer API</name>
-	<description>Customer API</description>
+
+	<groupId>com.ramon.pereira.customerapi</groupId>
+	<artifactId>customer-api-root</artifactId>
+
+	<packaging>pom</packaging>
+	<version>v0.0.0-SNAPSHOT</version>
+
+	<modules>
+		<module>app</module>
+		<module>acceptance-test</module>
+	</modules>
+
 	<properties>
 		<java.version>17</java.version>
+		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
