feat: add migration , entity e config

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/customer_db?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=usr_db
+spring.datasource.password=pass_db
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.flyway.enabled=true
+spring.flyway.url =jdbc:mysql://127.0.0.1:3306/customer_db?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.flyway.password=pass_db
+spring.flyway.user=usr_db
