--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+		<maven-release-plugin-version>3.0.0-M5</maven-release-plugin-version>
 	</properties>
 
 	<build>
@@ -30,6 +33,16 @@
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven-release-plugin-version}</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<updateWorkingCopyVersions>false</updateWorkingCopyVersions>
+					<pushChanges>false</pushChanges>
 				</configuration>
 			</plugin>
 		</plugins>
