--- a/.docker-compose/docker-compose.yml
+++ b/.docker-compose/docker-compose.yml
@@ -4,9 +4,15 @@ services:
   db:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: customer_db
-      MYSQL_USER: usr_db
-      MYSQL_PASSWORD: pass_db
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: customerdb
+      MYSQL_USER: usrdb
+      MYSQL_PASSWORD: passdb
     ports:
       - "3306:3306"
+
+  portainer:
+    image: portainer/portainer-ce
+    restart: always
+    ports:
+      - '9000:9000'
