--- a/acceptance-test/pom.xml
+++ b/acceptance-test/pom.xml
@@ -13,9 +13,23 @@
 	<properties>
 		<java.version>17</java.version>
 		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+		<testcontainers.version>1.17.1</testcontainers.version>
 	</properties>
 
-
+   <dependencies>
+	   <dependency>
+		   <groupId>org.testcontainers</groupId>
+		   <artifactId>testcontainers</artifactId>
+		   <version>${testcontainers.version}</version>
+		   <scope>test</scope>
+	   </dependency>
+	   <dependency>
+		   <groupId>org.testcontainers</groupId>
+		   <artifactId>mysql</artifactId>
+		   <version>${testcontainers.version}</version>
+		   <scope>test</scope>
+	   </dependency>
+   </dependencies>
 	<build>
 		<plugins>
 			<plugin>
