--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${DATASOURCE_URL:jdbc:mysql://localhost:3306/customer_db}
+    url: ${DATASOURCE_URL:jdbc:mysql://172.27.0.3:3306/customerdb}
     username: ${DATASOURCE_USERNAME:usrdb}
     password: ${DATASOURCE_PASSWORD:passdb}
   jpa:
@@ -10,6 +10,3 @@ spring:
   flyway:
     check-location: true
     enabled: true
-    url: ${DATASOURCE_URL:jdbc:mysql://localhost:3306/customer_db}
-    username: ${DATASOURCE_USERNAME:usrdb}
-    password: ${DATASOURCE_PASSWORD:passdb}
